--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -5,6 +5,7 @@
     transition: margin-left .28s;
     margin-left: 180px;
     position: relative;
+    top: 60px;
   }
   // 侧边栏
   .sidebar-container {
@@ -13,7 +14,7 @@
     height: 100%;
     position: fixed;
     font-size: 0px;
-    top: 0;
+    top: 60px;
     bottom: 0;
     left: 0;
     z-index: 1001;
