样式自适应问题解决

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -86,6 +86,13 @@
       }
     }
   }
+
+  .el-menu-merge {
+    .el-submenu__icon-arrow {
+      display: inline!important;
+    }
+  }
+
   .sidebar-container .nest-menu .el-submenu>.el-submenu__title,
   .sidebar-container .el-submenu .el-menu-item {
     min-width: 180px !important;
